--- a/app/index.html
+++ b/app/index.html
@@ -8,8 +8,16 @@
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
-    
-<h1>hfehfwhfkjkj</h1>
+
+    <header class="header">
+        <div class="container">
+            <div class="header__inner">
+                <a href="" class="logo">
+                    <img src="img/logo.svg" alt="">
+                </a>
+            </div>
+        </div>
+    </header>
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
