--- a/app/index.html
+++ b/app/index.html
@@ -15,6 +15,20 @@
                 <a href="" class="logo">
                     <img src="img/logo.svg" alt="">
                 </a>
+                <ul class="menu__list">
+                    <li class="menu__list-item">
+                        <a class="menu__list-link" href="">Обо мне</a>
+                    </li>
+                    <li class="menu__list-item">
+                        <a class="menu__list-link" href="">Обучение</a>
+                    </li>
+                    <li class="menu__list-item">
+                        <a class="menu__list-link" href="">Проекты</a>
+                    </li>
+                    <li class="menu__list-item">
+                        <a class="menu__list-link" href="">Контакты</a>
+                    </li>
+                </ul>
             </div>
         </div>
     </header>
