--- a/app/index.html
+++ b/app/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Skills Project</title>
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
@@ -29,9 +29,26 @@
                         <a class="menu__list-link" href="">Контакты</a>
                     </li>
                 </ul>
+
+                <div class="header__info">
+
+                </div>
             </div>
         </div>
     </header>
+
+    <section class="page-section basic-info">
+        <div class="page-section__wrapper basic-info__wrapper">
+            <div class="container">
+                <div class="basic-info__inner">
+                    <h1 class="basic-info__title">
+                        Frontend Developer 
+                    </h1>
+                    <img class="basic-info__img" src="img/basic-photo.jpg" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
